/cp 2012-06-01  Paolo Carlini  <paolo.carlini@oracle.com>

PR c++/26155
	* name-lookup.c (push_namespace): When error recovery is
	impossible just error out in duplicate_decls.

/testsuite
2012-06-01  Paolo Carlini  <paolo.carlini@oracle.com>

	PR c++/26155
	* g++.dg/parse/namespace-alias-1.C: New.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@188113 138bc75d-0d04-0410-961f-82ee72b054a4